--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -17,3 +17,4 @@ $assets: '../../src/assets';
 @import './partials/_items.scss';
 @import './partials/_pop-up.scss';
 @import './partials/_alert.scss';
+@import './partials/_live-preview.scss';
