--- a/src/sass/partials/_support.scss
+++ b/src/sass/partials/_support.scss
@@ -12,7 +12,7 @@
       height: auto;
     }
     .section-title {
-      color: $primary-extra-light;
+      color: $text-base-color;
     }
     .section-content {
       .contact {
