--- a/src/sass/mixins/_mixins.scss
+++ b/src/sass/mixins/_mixins.scss
@@ -1,5 +1,6 @@
 @mixin button($color, $bg, $hover, $padding) {
   background-color: $bg;
+  // background: linear-gradient(to right, $primary-dark 0%, $primary-light 35%, $primary-light 65%, $primary-dark 100%);
   color: $color;
   padding: $padding $padding * 3;
   text-transform: uppercase;
@@ -9,6 +10,7 @@
   letter-spacing: .1em;
   &:hover {
     background-color: $hover;
+    // background: linear-gradient(to right, $primary-light 0%, $primary-dark 35%, $primary-dark 65%, $primary-light 100%);
     box-shadow: 0px 0px 10px 0px $primary;
   }
 }
