--- a/src/sass/partials/_items.scss
+++ b/src/sass/partials/_items.scss
@@ -1,10 +1,16 @@
 .items {
+  box-sizing: border-box;
   display: flex;
   align-items: stretch;
   justify-content: flex-start;
   flex-wrap: wrap;
   font-size: 80%;
+  max-height: 100%;
   overflow-y: scroll;
+  padding: 1em;
+  @media screen and (max-width: $nav-break) {
+    max-height: 70vh;
+  }
   .item-info {
     text-align: left;
   }
