--- a/src/sass/partials/_pop-up.scss
+++ b/src/sass/partials/_pop-up.scss
@@ -10,7 +10,7 @@
   display: none;
   flex-direction: column;
   height: auto;
-  min-width: 400px;
+  min-width: 750px;
   // min-height: 150px;
   padding: 1em;
   border-radius: 4px;
@@ -38,6 +38,9 @@
   }
   @media screen and (max-width: 700px) {
     min-width: 80vw;
+  }
+  .logo-animation {
+    display: none;
   }
 }
 .pop-up-active {
