--- a/src/css/app.css
+++ b/src/css/app.css
@@ -96,9 +96,9 @@ hr {
   /* 2 */
   margin: 0;
   margin-top: 1em;
-  color: #bf5353;
-  border-color: #bf5353;
-  background-color: #bf5353;
+  color: #842c2c;
+  border-color: #842c2c;
+  background-color: #842c2c;
 }
 
 /**
@@ -123,7 +123,7 @@ a {
   /* 1 */
   -webkit-text-decoration-skip: objects;
   /* 2 */
-  color: #bf5353;
+  color: #bd3f3f;
   text-decoration: none;
   -webkit-transition: color .25s ease;
   transition: color .25s ease;
@@ -554,7 +554,7 @@ ul {
 }
 
 .button-block {
-  background-color: #331313;
+  background-color: #240c0c;
   color: #e9e9e9;
   margin: 1em auto;
   padding: 1em 0;
@@ -571,12 +571,12 @@ ul {
 
 .button-block:hover {
   background-color: #111111;
-  -webkit-box-shadow: 0px 0px 10px 0px #331313;
-          box-shadow: 0px 0px 10px 0px #331313;
+  -webkit-box-shadow: 0px 0px 10px 0px #240c0c;
+          box-shadow: 0px 0px 10px 0px #240c0c;
 }
 
 .button {
-  background-color: #582121;
+  background-color: #692323;
   color: #e9e9e9;
   padding: 1em 3em;
   text-transform: uppercase;
@@ -589,8 +589,8 @@ ul {
 
 .button:hover {
   background-color: #111111;
-  -webkit-box-shadow: 0px 0px 10px 0px #331313;
-          box-shadow: 0px 0px 10px 0px #331313;
+  -webkit-box-shadow: 0px 0px 10px 0px #240c0c;
+          box-shadow: 0px 0px 10px 0px #240c0c;
 }
 
 .button-secondary {
@@ -607,8 +607,8 @@ ul {
 
 .button-secondary:hover {
   background-color: #111111;
-  -webkit-box-shadow: 0px 0px 10px 0px #331313;
-          box-shadow: 0px 0px 10px 0px #331313;
+  -webkit-box-shadow: 0px 0px 10px 0px #240c0c;
+          box-shadow: 0px 0px 10px 0px #240c0c;
 }
 
 .title {
@@ -637,7 +637,7 @@ ul {
 }
 
 .bg-primary {
-  background-color: #903636 !important;
+  background-color: #842c2c !important;
 }
 
 .bg-secondary {
@@ -645,11 +645,11 @@ ul {
 }
 
 .page-current {
-  color: #bf5353;
+  color: #bd3f3f;
 }
 
 .page-current:hover {
-  color: #f6e8e8 !important;
+  color: #f2d7d7 !important;
 }
 
 .item-disabled {
@@ -754,7 +754,7 @@ ul {
 nav {
   height: 5em;
   position: relative;
-  background-color: #331313;
+  background-color: #240c0c;
   color: #e9e9e9;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -769,10 +769,18 @@ nav {
   font-size: 13px;
   letter-spacing: .025em;
   z-index: 3;
-  background: -webkit-gradient(linear, left top, right top, from(#0e0505), color-stop(35%, #903636), color-stop(65%, #903636), to(#0e0505));
-  background: linear-gradient(to right, #0e0505 0%, #903636 35%, #903636 65%, #0e0505 100%);
+  background: -webkit-gradient(linear, left top, right top, from(black), color-stop(35%, #842c2c), color-stop(65%, #842c2c), to(black));
+  background: linear-gradient(to right, black 0%, #842c2c 35%, #842c2c 65%, black 100%);
   -webkit-transition: all .25s linear;
   transition: all .25s linear;
+}
+
+@media screen and (max-width: 900px) {
+  nav #title {
+    -webkit-box-flex: .75;
+        -ms-flex: .75;
+            flex: .75;
+  }
 }
 
 @media screen and (max-width: 900px) {
@@ -813,7 +821,7 @@ nav a {
 }
 
 nav a:hover {
-  color: #bf5353;
+  color: #bd3f3f;
 }
 
 nav a img {
@@ -868,8 +876,8 @@ nav .links li > a:hover {
 }
 
 nav .links li:nth-child(2) a {
-  border-right: 1px solid #582121;
-  border-left: 1px solid #582121;
+  border-right: 1px solid #692323;
+  border-left: 1px solid #692323;
 }
 
 nav .user {
@@ -942,8 +950,8 @@ nav .user img {
   margin: 1em auto;
   padding: 1em;
   background-color: #373737 !important;
-  -webkit-box-shadow: 0px 0px 10px 0px #331313 !important;
-          box-shadow: 0px 0px 10px 0px #331313 !important;
+  -webkit-box-shadow: 0px 0px 10px 0px #240c0c !important;
+          box-shadow: 0px 0px 10px 0px #240c0c !important;
 }
 
 @media screen and (max-width: 1200px) {
@@ -1263,7 +1271,7 @@ main section:nth-child(3) .top > .controls {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  border: 1px dashed #bf5353;
+  border: 1px dashed #bd3f3f;
   background: rgba(28, 29, 37, 0.8);
   margin: .25em;
   padding: .5em;
@@ -1300,8 +1308,8 @@ main section:nth-child(3) .top > .controls {
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
   background-color: #373737;
-  -webkit-box-shadow: 0px 0px 10px 0px #331313;
-          box-shadow: 0px 0px 10px 0px #331313;
+  -webkit-box-shadow: 0px 0px 10px 0px #240c0c;
+          box-shadow: 0px 0px 10px 0px #240c0c;
   display: none;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
@@ -1316,7 +1324,7 @@ main section:nth-child(3) .top > .controls {
 }
 
 .pop-up .pop-up-title {
-  color: #bf5353;
+  color: #bd3f3f;
 }
 
 .pop-up .pop-up-content {
@@ -1376,8 +1384,8 @@ main section:nth-child(3) .top > .controls {
   right: -340px;
   z-index: 10;
   background-color: #373737;
-  -webkit-box-shadow: 0px 0px 10px 0px #331313;
-          box-shadow: 0px 0px 10px 0px #331313;
+  -webkit-box-shadow: 0px 0px 10px 0px #240c0c;
+          box-shadow: 0px 0px 10px 0px #240c0c;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1439,8 +1447,8 @@ main section:nth-child(3) .top > .controls {
   -webkit-transform: translate(-50%, -100%);
           transform: translate(-50%, -100%);
   background-color: #373737;
-  -webkit-box-shadow: 0px 0px 10px 0px #331313;
-          box-shadow: 0px 0px 10px 0px #331313;
+  -webkit-box-shadow: 0px 0px 10px 0px #240c0c;
+          box-shadow: 0px 0px 10px 0px #240c0c;
   display: none;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
@@ -1487,7 +1495,7 @@ main section:nth-child(3) .top > .controls {
 }
 
 .live-preview small > span {
-  color: #bf5353;
+  color: #bd3f3f;
   text-transform: uppercase;
   font-weight: 600;
 }
@@ -1497,7 +1505,7 @@ main section:nth-child(3) .top > .controls {
 }
 
 .live-preview .live-preview-title {
-  color: #bf5353;
+  color: #bd3f3f;
 }
 
 .live-preview .live-preview-content {
