--- a/src/sass/partials/_support.scss
+++ b/src/sass/partials/_support.scss
@@ -2,6 +2,7 @@
   background: url(#{$assets}/bg_main.png) no-repeat center;
   background-size: cover;
   box-sizing: border-box;
+  padding: 2em 0;
   section {
     box-sizing: border-box;
     width: 70%;
@@ -39,10 +40,10 @@
       }
     }
   }
-    section:first-child {
-      margin-top: 0;
-    }
-    section:last-child {
-      margin-bottom: 0;
-    }
+    // section:first-child {
+    //   margin-top: 0;
+    // }
+    // section:last-child {
+    //   margin-bottom: 0;
+    // }
 }
